--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-
 p {color: red;}
-
 p.ex2 {display: inline;}
 p.ex3 {display: block;}
 p.ex4 {display: inline-block;}
@@ -34,6 +32,21 @@ p.ex8 {
 	text-align: right;
 
 }
+p.ex9 {
+	color: white;
+	font-family: inherit;
+	font-size: 60px;
+	text-align: right;
+
+}
+
+
+
+div{
+	height: 200px;
+	width: 600px;
+	background: url(Parent.png);
+}
 
 body {
 	margin: 1% 1%;
@@ -42,17 +55,21 @@ body {
 	padding: 5px;
 	background-color: black;
 	font-family: monospace;
+
 }
 
 
 h1 {
 	box-sizing: border-box;
 	width: 50%;
-	border: solid #5B6DCD 10px;
+	border: solid lightyellow; 5px;
 	padding: 10px;
-
+	background-color: lightyellow;
+	height:100px;
+	width: 500px;
 	font-size: 300%;
 	color: white;
+	background: url(R.png);
 	
 }
 
